gcc/testsuite/rust/rustc/ui/allocator/function-allocator.rs
#[global_allocator]
fn foo() {} // { dg-error "" "" { target *-*-* } }

fn main() {}

